--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         tools:ignore="MissingClass"
         tools:targetApi="31">
         <activity
+            android:name=".mybooks"
+            android:exported="false" />
+        <activity
             android:name=".editbook"
             android:exported="false" />
         <activity
@@ -33,7 +36,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="*************************************" />
+            android:value="*****************************" />
 
         <activity
             android:name=".aboutus"
